# P2P_ImageSharing

./: README.md  directory_of_service.csv  main.py
Client/: Cargo.toml  uid.txt
Client/src/: communication.rs  main  main.rs  middleware.rs  steganography.rs
Client2/: Cargo.toml  durations.csv
Client2/src/: communication.rs  main.rs  middleware.rs
Compressing/: Cargo.toml
Compressing/src/: main.rs
Server/: Cargo.toml  dos.csv  server1_encryption_times.csv
Server/src/: bullyElection.rs  bully_election.rs  encryption.rs  main.rs  middleware.rs  steganography.rs
Server2/: Cargo.toml  server2_encryption_times.csv
Server2/src/: encryption.rs  main.rs  middleware.rs
Server3/: Cargo.toml  directory_of_service.csv  server2_encryption_times.csv  server3_encryption_times.csv
Server3/src/: encryption.rs  main  main.rs  middleware.rs
failure_simulation/: Cargo.toml
failure_simulation/src/: main.rs
