[package]
name = "Compressing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
tokio-util = "0.7.12"
show-image = "0.14.0"
image = "0.24.6"
socket2 = "0.4"
sysinfo = "0.29"
rand = "0.8"
steganography = "1.0.2"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
csv = "1.1"
serde_json = "1.0"