[package]
name = "Server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
image = "0.24.6"
socket2 = "0.4"
sysinfo = "0.29"
steganography = "1.0.2"
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3" # For binary format
serde_json = "1.0" # For JSON format
base64 = "0.22.1" # For base64 encoding